fix: narratives alignment issues in French version (#175)
* fix: narratives alignment issues in French version

* fix: wrap usual title

--- a/src/assets/styles/print.css
+++ b/src/assets/styles/print.css
@@ -570,6 +570,10 @@ li svg.web {
     break-before: always;
 }
 
+.journey-map .usual {
+    width: 200pt;
+}
+
 .journey-map-page-1,
 .journey-map-page-2 {
     height: auto;
@@ -621,6 +625,10 @@ li svg.web {
 
 .journey-map .scenario {
     position: relative;
+}
+
+.journey-map.narrative-1-fr .scenario {
+    top: -48pt;
 }
 
 .journey-map.narrative-1 li {
@@ -680,6 +688,10 @@ li svg.web {
     width: 182pt;
 }
 
+.journey-map.narrative-2-fr .scenario {
+    top: -47pt;
+}
+
 .journey-map.narrative-2 .scenario li:first-child {
     left: 164pt;
     top: 87pt;
@@ -727,6 +739,10 @@ li svg.web {
 
 .journey-map.narrative-2 .potential li:nth-child(3) {
     top: 308pt;
+}
+
+.journey-map-page-1.narrative-3-fr {
+    top: 291pt;
 }
 
 .journey-map.narrative-3 li {
@@ -780,6 +796,10 @@ li svg.web {
 
 .journey-map.narrative-3 .potential li:nth-child(3) {
     top: 289pt;
+}
+
+.journey-map-page-1.narrative-4-fr {
+    top: 279pt;
 }
 
 .journey-map.narrative-4 li {
